--- a/showhtml/index.html
+++ b/showhtml/index.html
@@ -6,19 +6,6 @@
 
     <title>Show HTML</title>
 
-    <style type="text/css">
-      input {
-        border-style: solid;
-        border-width: 1px;
-        border-radius: 2px;
-        border-color: lightgray;
-      }
-      input::placeholder {
-        opacity: 1;
-        text-align: center;
-        color: lightgray;
-      }
-    </style>
     <script type="text/javascript">
       const getUrlParams = () => {
         const params = { };
@@ -38,7 +25,7 @@
     <div id="content"></div>
     <br />
     <form method="GET">
-      <input type="text" name="text" placeholder="type HTML code here" />
+      <input type="text" name="text" placeholder="type HTML code here", style="border-style: solid; border-width: 1px; border-radius: 2px; border-color: lightgray;" />
     </form>
   </body>
 </html>
