--- a/scrumpoker/index.html
+++ b/scrumpoker/index.html
@@ -14,155 +14,10 @@
     <link rel="manifest" href="resources/manifest.json" />
     <link rel="icon" type="image/svg+xml" href="resources/icon.svg" sizes="any" />
 
-    <style>
-      body, root {
-        margin: 0;
-        padding: 0;
-        background-color: #000;
-        text-align: center;
-        overflow: hidden;
-        font-family: monospace;
-      }
-      .card {
-        background-color: #333;
-        border-radius: calc(1vw * var(--size) / 10);
-        --size: 20;
-        position: absolute;
-        top: calc(var(--row) * (20vh + 4vw) + (100vh - (4 * (20vh + 4vw) - 4vw)) / 2);
-        left: calc(var(--col) * (20vw + 4vw) + 4vw);
-        width: calc(var(--size) * 1vw);
-        height: calc(var(--size) * 1vh);
-        opacity: 1;
-        transition: all 1s;
-        transform: perspective(500px) translate3d(0, 0, 0);
-      }
-      [data-state='1'] .card[data-phase='0'] {
-        opacity: 0;
-      }
-      .card[data-phase='0'] {
-        z-index: 0;
-      }
-      .card[data-phase='1'] {
-        z-index: 1000;
-        top: 10vh;
-        left: 10vw;
-        --size: 80;
-        transform: perspective(500px) rotateY(180deg);
-      }
-      .card[data-phase='2'] {
-        z-index: 1000;
-        top: 10vh;
-        left: 10vw;
-        --size: 80;
-        transform: perspective(500px) rotateY(0deg);
-      }
-      .card__decoration {
-        position: absolute;
-        --delay: calc(1vw * var(--size) / 20);
-        width: auto;
-        height: auto;
-        top: var(--delay);
-        right: var(--delay);
-        bottom: var(--delay);
-        left: var(--delay);
-        border-style: solid;
-        border-radius: calc(1vw * var(--size) / 15);
-        border-width: calc(1vw * var(--size) / 100);
-        border-color: #fff;
-        transition: all 1s, visibility 0s linear 0.3s;
-        visibility: hidden;
-      }
-      .card[data-phase='1'] > .card__decoration {
-        visibility: visible;
-      }
-      .card__label {
-        position: absolute;
-        width: 100%;
-        text-align: center;
-        --font-size: calc(var(--size) * 1vw / 3);
-        font-size: var(--font-size);
-        line-height: 1;
-        margin-top: calc(var(--size) * 1vh / 2 - var(--font-size) / 2);
-        color: #FFF;
-        transition: all 1s, visibility 0s linear 0.3s;
-        visibility: visible;
-      }
-      .card[data-phase='1'] > .card__label {
-        visibility: hidden;
-      }
-    </style>
-
-    <script>
-      "use strict";
-
-      //custom elements
-      const used = (obj, ...funcs) => (funcs.forEach(func => func(obj)), obj);
-      const appendChildren = (el, ...children) =>
-        children.forEach(child => {
-          if (child != null) {
-            el.appendChild(typeof(child) === "string"? document.createTextNode(child): child)
-          }
-        })
-      ;
-      const __ = (tagName, attrs = null, ...children) => {
-        const el = document.createElement(tagName);
-        if (attrs != null) {
-          Object.keys(attrs).forEach(name => el.setAttribute(name, attrs[name]));
-        }
-        appendChildren(el, ...children);
-        return el;
-      };
-
-      const root = __("div", { "class": "root", "data-state": 0 });
-      document.addEventListener("DOMContentLoaded", () => document.body.appendChild(root), false);
-      
-      const __card = (label, row, col) => used(
-        __("div",
-          {
-            "class": ("card" + (label == "" ? " card_empty": "")),
-            "data-phase": 0,
-            "style": "--row: " + row + "; --col: " + col + ";"
-          },
-          __("div", {"class": "card__decoration"}),
-          __("div", {"class": "card__label"},
-            label
-          )
-        ),
-        el => el.onclick = element => {
-          let newPhase = Number(el.dataset.phase) + 1;
-          root.dataset.state = 1;
-          if (newPhase > 2) {
-            root.dataset.state = 0;
-            newPhase = 0;
-          }
-          el.dataset.phase = newPhase;
-        }
-      );
-      appendChildren(root,
-        __card("0",      0, 0),
-        __card("1/2",    0, 1),
-        __card("1",      0, 2),
-        __card("2",      0, 3),
-        __card("3",      1, 0),
-        __card("5",      1, 1),
-        __card("8",      1, 2),
-        __card("13",     1, 3),
-        __card("20",     2, 0),
-        __card("40",     2, 1),
-        __card("100",    2, 2),
-        __card("?",      2, 3),
-        __card("\u2615", 3, 1.5)
-      );
-
-      if ('serviceWorker' in navigator) {
-        navigator.serviceWorker.register('./src/sw.js')
-        .then(() => 
-          navigator.serviceWorker.ready
-          .then((worker) => worker.sync.register('syncdata'))
-        )
-        .catch(err => console.log(err));
-      }
-    </script>
+    <link rel="stylesheet" href="src/main.css">
+    
+    <script type="text/javascript" src="src/elements.js"></script>
+    <script type="text/javascript" src="src/index.js"></script>
   </head>
   <body></body>
 </html>
