--- a/8.html
+++ b/8.html
@@ -26,7 +26,7 @@
         }
         .first {
             background-color: yellow;
-            padding-right: 0
+            margin-right: 20px;
         }
         .second {
             background-color: grey;
