--- a/8.html
+++ b/8.html
@@ -26,7 +26,8 @@
         }
         .first {
             background-color: yellow;
-            margin-right: 20px;
+            padding-right: 20px;
+            box-sizing: border-box;
         }
         .second {
             background-color: grey;
