--- a/8.html
+++ b/8.html
@@ -13,6 +13,7 @@
             display: -webkit-box;
             display: -ms-flexbox;
             display: flex;
+            box-sizing: border-box;
 
             -webkit-justify-content: space-between;
             -ms-flex-pack: justify;
