--- a/8.html
+++ b/8.html
@@ -15,7 +15,7 @@
             display: flex;
             box-sizing: border-box;
 
-            -webkit-justify-content: space-between;
+            -webkit-box-pack: justify;
             -ms-flex-pack: justify;
             justify-content: space-between;
 
@@ -36,9 +36,9 @@
             width: 60px;
         }
         .secondflex {
-            -webkit-justify-content: left;
-            -ms-flex-pack: left;
-            justify-content: left;
+            -webkit-box-pack: start;
+            -ms-flex-pack: start;
+            justify-content: flex-start;
         }
     </style>
 </head>
