--- a/8.html
+++ b/8.html
@@ -27,8 +27,11 @@
         }
         .first {
             background-color: yellow;
-            padding-right: 15px;
+            /*padding-right: 15px;*/
             box-sizing: border-box;
+        }
+        .first::after {
+            width: 20px;
         }
         .second {
             background-color: grey;
