--- a/8.html
+++ b/8.html
@@ -31,6 +31,7 @@
             box-sizing: border-box;
         }
         .first::after {
+            content: '';
             width: 20px;
         }
         .second {
