--- a/8.html
+++ b/8.html
@@ -13,7 +13,6 @@
             display: -webkit-box;
             display: -ms-flexbox;
             display: flex;
-            box-sizing: border-box;
 
             -webkit-box-pack: justify;
             justify-content: space-between;
@@ -26,16 +25,14 @@
         .first {
             background-color: yellow;
             /*padding-right: 15px;*/
-            box-sizing: border-box;
         }
         .second {
-            background-color: grey;
-            height: 40px;
+            background-color: black;
+            height: 30px;
             width: 60px;
         }
         .secondflex {
             -webkit-box-pack: start;
-            -ms-flex-pack: start;
             justify-content: flex-start;
         }
     </style>
