--- a/8.html
+++ b/8.html
@@ -21,6 +21,7 @@
             align-items: center;
 
             padding-bottom: 20px;
+            max-width: 100%;
         }
         .first {
             background-color: yellow;
