--- a/8.html
+++ b/8.html
@@ -24,7 +24,8 @@
             max-width: 100%;
         }
         .first {
-            background-color: yellow;
+            background-color: blue;
+            width: -webkit-fit-content;
             /*padding-right: 15px;*/
         }
         .second {
