--- a/8.html
+++ b/8.html
@@ -25,7 +25,7 @@
         }
         .first {
             background-color: blue;
-            width: -webkit-fit-content;
+            width: -webkit-max-content;
             /*padding-right: 15px;*/
         }
         .second {
