--- a/8.html
+++ b/8.html
@@ -24,7 +24,7 @@
             max-width: 100%;
         }
         .first {
-            background-color: blue;
+            background-color: yellow;
             width: -webkit-max-content;
             /*padding-right: 15px;*/
         }
