--- a/8.html
+++ b/8.html
@@ -24,8 +24,8 @@
             max-width: 100%;
         }
         .first {
-            background-color: yellow;
-            width: -webkit-max-content;
+            background-color: red;
+            width: -webkit-min-content;
             /*padding-right: 15px;*/
         }
         .second {
