--- a/8.html
+++ b/8.html
@@ -24,8 +24,9 @@
             max-width: 100%;
         }
         .first {
-            background-color: red;
-            width: -webkit-min-content;
+            background-color: yellow;
+            width: -webkit-stretch;
+            width: stretch;
             /*padding-right: 15px;*/
         }
         .second {
