--- a/8.html
+++ b/8.html
@@ -17,7 +17,7 @@
             -webkit-box-pack: justify;
             justify-content: space-between;
 
-            -webkit-box-align: center;
+            /*-webkit-box-align: center;*/
             align-items: center;
 
             padding-bottom: 20px;
