--- a/8.html
+++ b/8.html
@@ -21,13 +21,9 @@
             align-items: center;
 
             padding-bottom: 20px;
-            max-width: 100%;
         }
         .first {
-            background-color: yellow;
-            width: -webkit-stretch;
-            width: stretch;
-            /*padding-right: 15px;*/
+            background-color: red;
         }
         .second {
             background-color: black;
