--- a/8.html
+++ b/8.html
@@ -21,9 +21,10 @@
             align-items: center;
 
             padding-bottom: 20px;
+            width: auto;
         }
         .first {
-            background-color: red;
+            background-color: yellow;
         }
         .second {
             background-color: black;
