--- a/8.html
+++ b/8.html
@@ -16,6 +16,7 @@
             -webkit-box-pack: justify;
             justify-content: space-between;
 
+            -webkit-box-align: center;
             align-items: center;
 
             margin-bottom: 20px;
