--- a/9.html
+++ b/9.html
@@ -10,26 +10,24 @@
             padding: 5px;
         }
         .flex {
-            display: -webkit-box;
+            display: -webkit-flex;
             display: flex;
-            -webkit-box-pack: justify;
+            -webkit-justify-content: space-between;
             justify-content: space-between;
-            -webkit-box-align: center;
+            -webkit-align-items: center;
             align-items: center;
             margin-bottom: 20px;
         }
         .first {
-            -webkit-box-flex: 1;
             background-color: green;
         }
         .second {
-            -webkit-box-flex: 0;
             background-color: black;
             height: 30px;
             width: 60px;
         }
         .secondflex {
-            -webkit-box-pack: start;
+            -webkit-justify-content: flex-start;
             justify-content: flex-start;
         }
     </style>
