--- a/xylophone/index.html
+++ b/xylophone/index.html
@@ -41,6 +41,10 @@
         color: white;
         border-radius: 2px;
       }
+
+      .link, .link:active, .link:hover, .link:visited {
+        color: #888;
+      }
     </style>
     <script type="text/javascript" defer>
       'use strict';
@@ -93,7 +97,7 @@
         return el;
       };
 
-      let { name, schema, keysCount = 12 } = getUrlParams();
+      let { name, schema, keysCount = 12, source } = getUrlParams();
       keysCount = Number(keysCount);
 
       const keys = __('div', { class: 'keys', style: `--keys-count: ${keysCount}` },
@@ -113,6 +117,10 @@
         }
 
         body.appendChild(keys);
+
+        if (source) {
+          body.appendChild(__('p', {}, __('a', { href: source, target: '_blank', class: 'link' }, 'источник')));
+        }
       });
     </script>
   </head>
