--- a/redirect/index.html
+++ b/redirect/index.html
@@ -19,7 +19,7 @@ const getUrlParams = () => {
   return params;
 };
   
-const appendToBody = text => document.getElementsByTagname('body')[0].appendChild(document.createTextNode(text));
+const appendToBody = text => document.getElementsByTagName('body')[0].appendChild(document.createTextNode(text));
 
 const { url } = getUrlParams();
 
